@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.1'
+	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
 }
 
@@ -18,18 +18,16 @@ repositories {
 }
 
 ext {
-	set('springShellVersion', "3.1.1")
+	set('springShellVersion', "3.3.1")
 }
 
 dependencies {
 	implementation 'org.springframework.shell:spring-shell-starter'
-	//implementation 'org.springframework.shell:spring-shell-starter-jna:3.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.shell:spring-shell-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	compileOnly 'org.projectlombok:lombok:1.18.32'
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
-	//implementation 'org.jline:jline:3.26.2'
 }
 
 dependencyManagement {
@@ -41,8 +39,3 @@ dependencyManagement {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
-/*bootRun {
-	jvmArgs(['--enable-preview'])
-	standardInput = System.in
-}*/
